<resources>
    <string name="app_name">My Application1</string>
    <string name="mainmenu">Main Menu</string>
    <string name="hello">Hello</string>
    <string name="shota">Shota</string>
    <string name="search">Search</string>
    <string name="hopeitworks">HopeItWorks</string>
    <string name="goals">Goals</string>
    <string name="calculator">Calculator</string>
    <string name="tictactoe">TicTacToe</string>
    <string name="home">Home</string>
    <string name="trending">TRENDING</string>
    <string name="daewoo_lanos_rocks">Daewoo Lanos Rocks!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>